compiler-skeleton/tests/compile-error/function_param2.ln
def fn2(z:int):int{
	return z+5;
}

x:int;
x = fn2();